# pptpd-admin

./: .gitignore  .gitlab-ci.yml  converter.py  docker-compose.yaml  init_server.sh  pyproject.toml  readme.md  setup.cfg
docs/: README.md  configure_server.md  road_map.md
pptpd_admin/: .dockerignore  Dockerfile  Makefile  build.Dockerfile  depend.sh  entrypoint.sh  main.py
pptpd_admin/models/: base.py
pptpd_admin/schemas/: chap_secrets.py  pptpd.py  shell.py
tests/: test_pptpd_admin.py  test_shell.py
vue/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
vue/src/: App.vue  style.css
vue/src/components/: MainView.vue  Table.vue
